crates/aivi/tests/snapshots/insta_compiler_snapshots__snapshots_basic_hir.snap
---
source: crates/aivi/tests/insta_compiler_snapshots.rs
expression: pretty_json(&hir_program)
---
{
  "modules": [
    {
      "name": "snapshots.basic",
      "defs": [
        {
          "name": "add",
          "expr": {
            "kind": "Lambda",
            "id": 4,
            "param": "a",
            "body": {
              "kind": "Lambda",
              "id": 3,
              "param": "b",
              "body": {
                "kind": "Binary",
                "id": 0,
                "op": "+",
                "left": {
                  "kind": "Var",
                  "id": 1,
                  "name": "a"
                },
                "right": {
                  "kind": "Var",
                  "id": 2,
                  "name": "b"
                }
              }
            }
          }
        },
        {
          "name": "inc",
          "expr": {
            "kind": "Call",
            "id": 5,
            "func": {
              "kind": "Var",
              "id": 6,
              "name": "add"
            },
            "args": [
              {
                "kind": "LitNumber",
                "id": 7,
                "text": "1"
              }
            ]
          }
        },
        {
          "name": "answer",
          "expr": {
            "kind": "If",
            "id": 8,
            "cond": {
              "kind": "LitBool",
              "id": 9,
              "value": true
            },
            "then_branch": {
              "kind": "Call",
              "id": 10,
              "func": {
                "kind": "Var",
                "id": 11,
                "name": "add"
              },
              "args": [
                {
                  "kind": "LitNumber",
                  "id": 12,
                  "text": "20"
                },
                {
                  "kind": "LitNumber",
                  "id": 13,
                  "text": "22"
                }
              ]
            },
            "else_branch": {
              "kind": "LitNumber",
              "id": 14,
              "text": "0"
            }
          }
        },
        {
          "name": "tupled",
          "expr": {
            "kind": "Tuple",
            "id": 15,
            "items": [
              {
                "kind": "Call",
                "id": 16,
                "func": {
                  "kind": "Var",
                  "id": 17,
                  "name": "inc"
                },
                "args": [
                  {
                    "kind": "LitNumber",
                    "id": 18,
                    "text": "1"
                  }
                ]
              },
              {
                "kind": "Call",
                "id": 19,
                "func": {
                  "kind": "Var",
                  "id": 20,
                  "name": "inc"
                },
                "args": [
                  {
                    "kind": "LitNumber",
                    "id": 21,
                    "text": "2"
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  ]
}
