crates/aivi/tests/snapshots/insta_compiler_snapshots__snapshots_errors_diagnostics.snap
---
source: crates/aivi/tests/insta_compiler_snapshots.rs
expression: diagnostics_snapshot(&diags)
---

