crates/aivi/tests/snapshots/insta_compiler_snapshots__snapshots_matching_formatted.snap
---
source: crates/aivi/tests/insta_compiler_snapshots.rs
expression: normalize_newlines(format_text(src))
---
module snapshots.matching

describe = value => value match
  | 0 => "zero"
  | 1 => "one"
  | _ => "many"

flip = pair => pair match
  | (a, b) => (b, a)
