crates/aivi/tests/snapshots/insta_compiler_snapshots__snapshots_matching_rust_ir.snap
---
source: crates/aivi/tests/insta_compiler_snapshots.rs
expression: pretty_json(&rust_ir)
---
{
  "modules": [
    {
      "name": "snapshots.matching",
      "defs": [
        {
          "name": "describe",
          "expr": {
            "kind": "Lambda",
            "id": 8,
            "param": "value",
            "body": {
              "kind": "Match",
              "id": 1,
              "scrutinee": {
                "kind": "Local",
                "id": 0,
                "name": "value"
              },
              "arms": [
                {
                  "pattern": {
                    "Literal": {
                      "id": 2,
                      "value": {
                        "Number": "0"
                      }
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 3,
                    "text": "zero"
                  }
                },
                {
                  "pattern": {
                    "Literal": {
                      "id": 4,
                      "value": {
                        "Number": "1"
                      }
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 5,
                    "text": "one"
                  }
                },
                {
                  "pattern": {
                    "Wildcard": {
                      "id": 6
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 7,
                    "text": "many"
                  }
                }
              ]
            }
          }
        },
        {
          "name": "snapshots.matching.describe",
          "expr": {
            "kind": "Lambda",
            "id": 8,
            "param": "value",
            "body": {
              "kind": "Match",
              "id": 1,
              "scrutinee": {
                "kind": "Local",
                "id": 0,
                "name": "value"
              },
              "arms": [
                {
                  "pattern": {
                    "Literal": {
                      "id": 2,
                      "value": {
                        "Number": "0"
                      }
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 3,
                    "text": "zero"
                  }
                },
                {
                  "pattern": {
                    "Literal": {
                      "id": 4,
                      "value": {
                        "Number": "1"
                      }
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 5,
                    "text": "one"
                  }
                },
                {
                  "pattern": {
                    "Wildcard": {
                      "id": 6
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "LitString",
                    "id": 7,
                    "text": "many"
                  }
                }
              ]
            }
          }
        },
        {
          "name": "flip",
          "expr": {
            "kind": "Lambda",
            "id": 17,
            "param": "pair",
            "body": {
              "kind": "Match",
              "id": 10,
              "scrutinee": {
                "kind": "Local",
                "id": 9,
                "name": "pair"
              },
              "arms": [
                {
                  "pattern": {
                    "Tuple": {
                      "id": 11,
                      "items": [
                        {
                          "Var": {
                            "id": 12,
                            "name": "a"
                          }
                        },
                        {
                          "Var": {
                            "id": 13,
                            "name": "b"
                          }
                        }
                      ]
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "Tuple",
                    "id": 14,
                    "items": [
                      {
                        "kind": "Local",
                        "id": 15,
                        "name": "b"
                      },
                      {
                        "kind": "Local",
                        "id": 16,
                        "name": "a"
                      }
                    ]
                  }
                }
              ]
            }
          }
        },
        {
          "name": "snapshots.matching.flip",
          "expr": {
            "kind": "Lambda",
            "id": 17,
            "param": "pair",
            "body": {
              "kind": "Match",
              "id": 10,
              "scrutinee": {
                "kind": "Local",
                "id": 9,
                "name": "pair"
              },
              "arms": [
                {
                  "pattern": {
                    "Tuple": {
                      "id": 11,
                      "items": [
                        {
                          "Var": {
                            "id": 12,
                            "name": "a"
                          }
                        },
                        {
                          "Var": {
                            "id": 13,
                            "name": "b"
                          }
                        }
                      ]
                    }
                  },
                  "guard": null,
                  "body": {
                    "kind": "Tuple",
                    "id": 14,
                    "items": [
                      {
                        "kind": "Local",
                        "id": 15,
                        "name": "b"
                      },
                      {
                        "kind": "Local",
                        "id": 16,
                        "name": "a"
                      }
                    ]
                  }
                }
              ]
            }
          }
        }
      ]
    }
  ]
}
